# EV_Battery_Prediction

./: README.md  code.ipynb  main.py  pyproject.toml
app/: app.py  db.sql
app/templates/: about.html  fair_price.html  index.html  login.html  prediction.html  register.html  user_home.html
