[project]
name = "EV_Battery_RUL_Prediction"
version = "0.1.0"
description = "A machine learning based approach to determine the Remaining Useful Life (RUL) of a battery and calculate the fair exchange value for it."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.2.0",
]
